<resources>
    <string name="app_name">Audio Dual Stream</string>
    <string name="channel_id">Channel ID</string>
    <string name="audience">Audience</string>
    <string name="host">Host</string>
    <string name="join">Join</string>
    <string name="publish_audio">Publish Audio</string>
    <string name="publish_dual_stream">Publish Dual Stream</string>
    <string name="playing_music">Playing Music</string>
    <string name="leave_channel">Leave Channel</string>
    <string name="high_stream">High</string>
    <string name="low_stream">Low</string>
    <string name="high_stream_pre">H</string>
    <string name="low_stream_pre">L</string>
    <string name="low_stream_for_all">Low Stream for All</string>
</resources>