<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.HomeFragment">

    <io.agora.auikit.ui.basic.AUITitleBar
        android:id="@+id/titleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:aui_titleBar_backHeight="32sp"
        app:aui_titleBar_backWidth="32dp"
        app:aui_titleBar_mode="back"
        app:aui_titleBar_titleText="@string/app_name"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvChannelId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#666666"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleBar"
        tools:text="1234" />

    <io.agora.auikit.ui.basic.AUIRecyclerView
        android:id="@+id/recyclerAvatar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="18dp"
        android:paddingTop="18dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/tvChannelId"
        app:spanCount="3"
        tools:itemCount="6"
        tools:layout_editor_absoluteX="0dp"
        tools:listitem="@layout/item_live_view" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutPublishAudio"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginBottom="28dp"
        app:layout_constraintBottom_toTopOf="@id/layoutPublishDualStream">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="34dp"
            android:background="#3478f6"
            app:contentPadding="6dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearance="@style/RoundedStyle"
            app:srcCompat="@drawable/volume" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:text="@string/publish_audio"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/checkPublishAudio"
            android:layout_width="51dp"
            android:layout_height="31dp"
            android:layout_marginEnd="33dp"
            android:background="@drawable/aui_musicplayer_def_selector"
            android:button="@android:color/transparent"
            android:checked="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="18dp"
            app:dividerColor="#b9b9bb"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutPublishDualStream"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginBottom="28dp"
        app:layout_constraintBottom_toTopOf="@id/layoutPlayingMusic">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="34dp"
            android:background="#3478f6"
            app:contentPadding="6dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearance="@style/RoundedStyle"
            app:srcCompat="@drawable/volume" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:text="@string/publish_dual_stream"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/checkPublishDualStream"
            android:layout_width="51dp"
            android:layout_height="31dp"
            android:layout_marginEnd="33dp"
            android:background="@drawable/aui_musicplayer_def_selector"
            android:button="@android:color/transparent"
            android:checked="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="18dp"
            app:dividerColor="#b9b9bb"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutPlayingMusic"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginBottom="45dp"
        app:layout_constraintBottom_toTopOf="@id/btnLeaveChannel">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="34dp"
            android:background="#3478f6"
            app:contentPadding="6dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearance="@style/RoundedStyle"
            app:srcCompat="@drawable/volume" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:text="@string/playing_music"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/checkPlayingMusic"
            android:layout_width="51dp"
            android:layout_height="31dp"
            android:layout_marginEnd="33dp"
            android:background="@drawable/aui_musicplayer_def_selector"
            android:button="@android:color/transparent"
            android:checked="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="18dp"
            app:dividerColor="#b9b9bb"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutLowStream"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginBottom="45dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/btnLeaveChannel">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="34dp"
            android:background="#3478f6"
            app:contentPadding="6dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearance="@style/RoundedStyle"
            app:srcCompat="@drawable/volume" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:text="@string/low_stream_for_all"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/checkLowStream"
            android:layout_width="51dp"
            android:layout_height="31dp"
            android:layout_marginEnd="33dp"
            android:background="@drawable/aui_musicplayer_def_selector"
            android:button="@android:color/transparent"
            android:checked="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="18dp"
            app:dividerColor="#b9b9bb"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <io.agora.auikit.ui.basic.AUIButton
        android:id="@+id/btnLeaveChannel"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:layout_marginBottom="75dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:aui_button_backgroundMode="solid"
        app:aui_button_backgroundNormalColor="#2c2c2e"
        app:aui_button_cornersRadius="14sp"
        app:aui_button_drawableStart="@drawable/leave_channel"
        app:aui_button_text="@string/leave_channel"
        app:aui_button_textNormalColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>